<resources>
    <string name="app_name">Hash Generator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hash_generator">Hash Generator</string>
    <string name="encryption_type">SHA-256</string>
    <string name="encryption_type_selector">Encryption Type Selector</string>
    <string name="text_here">Text here...</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="success_icon">Success Icon</string>
    <string name="empty_string">Field Empty.</string>
    <string name="clear_text_message">Cleared.</string>
    <string name="hash_textview">TextView</string>
    <string name="copy_btn">Copy</string>
    <string name="copied">Copied!</string>

    <string-array name="hash_algorithms">
        <item>SHA-256</item>
        <item>SHA-512</item>
        <item>MD5</item>
    </string-array>
</resources>