<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:id="@+id/root_layout"
    android:background="@color/dark">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="120dp"
        android:text="@string/hash_generator"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/encryption_type_selector"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        android:layout_marginRight="16dp"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxStrokeColor="@color/teal_200"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/teal_200"
        app:endIconTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encryption_type"
            android:inputType="none"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/plainText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLines="6"
        android:lines="6"
        android:padding="16dp"
        android:autofillHints="Your text here..."
        android:inputType="textMultiLine"
        android:hint="@string/text_here"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:background="@drawable/round_background"
        android:gravity="start|top"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generateButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/button_background"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/generate"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <View
        android:id="@+id/success_background"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:alpha="0"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/success_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ok_icon"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/success_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>